# OBJ_3d_viewer

./: README.md
src/: CMakeLists.txt  Makefile  helpers.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.c  parser.h  tests.c  view_config.txt  view_config_save.c  widget.cpp  widget.h
src/helpers/: affin_transform.c  helpers.c  s21_matrix.c  s21_matrix.h
src/qt/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
